[gd_scene load_steps=2 format=3 uid="uid://cg8gcudfyk143"]

[ext_resource type="Script" path="res://entities/enemy_hurtbox/enemy_hurtbox.gd" id="1_icxsd"]

[node name="EnemyHurtbox" type="Area3D"]
monitorable = false
script = ExtResource("1_icxsd")
damage = null
knockback = null

[connection signal="body_entered" from="." to="." method="_on_enemy_hurtbox_body_entered"]
